--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,8 @@
     <title>node.js http server</title>
   </head>
   <body>
-
-    <h1>Serving up static files like they were turtles strapped to rockets.</h1>
-
-    <img src="./img/turtle.png"/>
+    <h1>Check Out This Page!</h1>
+    <a href="./kenzie/welcome.html">Welcome Page</a>
+    <img src="./img/turtle.png" />
   </body>
 </html>
-
